ffi/poc/cpp/corpus/include/ak_abi.h

/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Encode group for `UploadResultData`. */
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
/* Decode group for `UploadResultData`. */
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `UploadResultData`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `MetricsBatch`. */
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};
/* Decode group for `MetricsBatch`. */
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `MetricsBatch`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_MetricsBatch {
  struct ak_str id;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `Pair`. */
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
/* Decode group for `Pair`. */
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Pair`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Pair {
  struct ak_str key;
  int32_t value;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ListResultsResponse`. */
struct ak_efix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListResultsResponse`. */
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ListResultsResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ListResultsResponse {
  int32_t page;
  int32_t total;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ListTasksDetailedResponse`. */
struct ak_efix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
/* Decode group for `ListTasksDetailedResponse`. */
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ListTasksDetailedResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ListTaskSummaryResponse`. */
struct ak_efix_ListTaskSummaryResponse {
  uint32_t presence;
};
/* Decode group for `ListTaskSummaryResponse`. */
struct ak_dfix_ListTaskSummaryResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ListTaskSummaryResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ListTaskSummaryResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ListProbeResponse`. */
struct ak_efix_ListProbeResponse {
  uint32_t presence;
};
/* Decode group for `ListProbeResponse`. */
struct ak_dfix_ListProbeResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ListProbeResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ListProbeResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ListMetricsResponse`. */
struct ak_efix_ListMetricsResponse {
  uint32_t presence;
};
/* Decode group for `ListMetricsResponse`. */
struct ak_dfix_ListMetricsResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ListMetricsResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ListMetricsResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `UploadResultDataMessage`. */
struct ak_efix_UploadResultDataMessage {
  struct ak_efix_UploadResultData upload;
  uint32_t presence;
};
#define AK_EFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD (1u << 0)
/* Decode group for `UploadResultDataMessage`. */
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD (1u << 0)
/* Encode group for `UploadResultDataMessage`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_UploadResultDataMessage {
  struct ak_ufix_UploadResultData upload;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD (1u << 0)
/* Encode group for `DualResponse`. */
struct ak_efix_DualResponse {
  uint32_t presence;
};
/* Decode group for `DualResponse`. */
struct ak_dfix_DualResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `DualResponse`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_DualResponse {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ChunkLeaf`. */
struct ak_efix_ChunkLeaf {
  struct ak_str k;
  int32_t v;
  uint32_t presence;
};
/* Decode group for `ChunkLeaf`. */
struct ak_dfix_ChunkLeaf {
  struct ak_span k;
  int32_t v;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ChunkLeaf`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ChunkLeaf {
  struct ak_str k;
  int32_t v;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ChunkInner`. */
struct ak_efix_ChunkInner {
  uint32_t presence;
};
/* Decode group for `ChunkInner`. */
struct ak_dfix_ChunkInner {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `ChunkInner`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_ChunkInner {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `ChunkElement`. */
struct ak_efix_ChunkElement {
  struct ak_str id;
  struct ak_efix_ChunkInner inner;
  uint32_t presence;
};