ffi/poc/codec/crates/ak-abi/src/generated_corpus/abi.rs

impl ak_efix_MetricsBatch {
    pub const ZERO: Self = ak_efix_MetricsBatch {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        presence: 0,
    };
}

/// Decode group for `MetricsBatch`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_MetricsBatch {
    pub id: ak_span,
    pub presence: u32,
}
impl ak_dfix_MetricsBatch {
    pub const ZERO: Self = ak_dfix_MetricsBatch {
        id: ak_span { off: 0, len: 0, coder: 0 },
        presence: 0,
    };
}

/// Encode group for `MetricsBatch`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_MetricsBatch {
    pub id: ak_str,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_MetricsBatch {
    pub const ZERO: Self = ak_ufix_MetricsBatch {
        id: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `Pair`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_Pair {
    pub key: ak_str,
    pub value: i32,
    pub presence: u32,
}
impl ak_efix_Pair {
    pub const ZERO: Self = ak_efix_Pair {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: 0,
        presence: 0,
    };
}

/// Decode group for `Pair`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_Pair {
    pub key: ak_span,
    pub value: i32,
    pub presence: u32,
}
impl ak_dfix_Pair {
    pub const ZERO: Self = ak_dfix_Pair {
        key: ak_span { off: 0, len: 0, coder: 0 },
        value: 0,
        presence: 0,
    };
}

/// Encode group for `Pair`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_Pair {
    pub key: ak_str,
    pub value: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_Pair {
    pub const ZERO: Self = ak_ufix_Pair {
        key: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        value: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListResultsResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_efix_ListResultsResponse {
    pub const ZERO: Self = ak_efix_ListResultsResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Decode group for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListResultsResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_dfix_ListResultsResponse {
    pub const ZERO: Self = ak_dfix_ListResultsResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Encode group for `ListResultsResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ListResultsResponse {
    pub page: i32,
    pub total: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ListResultsResponse {
    pub const ZERO: Self = ak_ufix_ListResultsResponse {
        page: 0,
        total: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListTasksDetailedResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_efix_ListTasksDetailedResponse {
    pub const ZERO: Self = ak_efix_ListTasksDetailedResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Decode group for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListTasksDetailedResponse {
    pub page: i32,
    pub total: i32,
    pub presence: u32,
}
impl ak_dfix_ListTasksDetailedResponse {
    pub const ZERO: Self = ak_dfix_ListTasksDetailedResponse {
        page: 0,
        total: 0,
        presence: 0,
    };
}

/// Encode group for `ListTasksDetailedResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ListTasksDetailedResponse {
    pub page: i32,
    pub total: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ListTasksDetailedResponse {
    pub const ZERO: Self = ak_ufix_ListTasksDetailedResponse {
        page: 0,
        total: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListTaskSummaryResponse {
    pub presence: u32,
}
impl ak_efix_ListTaskSummaryResponse {
    pub const ZERO: Self = ak_efix_ListTaskSummaryResponse {
        presence: 0,
    };
}

/// Decode group for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListTaskSummaryResponse {
    pub presence: u32,
}
impl ak_dfix_ListTaskSummaryResponse {
    pub const ZERO: Self = ak_dfix_ListTaskSummaryResponse {
        presence: 0,
    };
}

/// Encode group for `ListTaskSummaryResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ListTaskSummaryResponse {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ListTaskSummaryResponse {
    pub const ZERO: Self = ak_ufix_ListTaskSummaryResponse {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListProbeResponse {
    pub presence: u32,
}
impl ak_efix_ListProbeResponse {
    pub const ZERO: Self = ak_efix_ListProbeResponse {
        presence: 0,
    };
}

/// Decode group for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListProbeResponse {
    pub presence: u32,
}
impl ak_dfix_ListProbeResponse {
    pub const ZERO: Self = ak_dfix_ListProbeResponse {
        presence: 0,
    };
}

/// Encode group for `ListProbeResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ListProbeResponse {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ListProbeResponse {
    pub const ZERO: Self = ak_ufix_ListProbeResponse {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ListMetricsResponse {
    pub presence: u32,
}
impl ak_efix_ListMetricsResponse {
    pub const ZERO: Self = ak_efix_ListMetricsResponse {
        presence: 0,
    };
}

/// Decode group for `ListMetricsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ListMetricsResponse {
    pub presence: u32,
}
impl ak_dfix_ListMetricsResponse {
    pub const ZERO: Self = ak_dfix_ListMetricsResponse {
        presence: 0,
    };
}

/// Encode group for `ListMetricsResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ListMetricsResponse {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ListMetricsResponse {
    pub const ZERO: Self = ak_ufix_ListMetricsResponse {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_UploadResultDataMessage {
    pub upload: ak_efix_UploadResultData,
    pub presence: u32,
}
impl ak_efix_UploadResultDataMessage {
    pub const ZERO: Self = ak_efix_UploadResultDataMessage {
        upload: ak_efix_UploadResultData::ZERO,
        presence: 0,
    };
}
pub const AK_EFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Decode group for `UploadResultDataMessage`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_UploadResultDataMessage {
    pub upload: ak_dfix_UploadResultData,
    pub presence: u32,
}
impl ak_dfix_UploadResultDataMessage {
    pub const ZERO: Self = ak_dfix_UploadResultDataMessage {
        upload: ak_dfix_UploadResultData::ZERO,
        presence: 0,
    };
}
pub const AK_DFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Encode group for `UploadResultDataMessage`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_UploadResultDataMessage {
    pub upload: ak_ufix_UploadResultData,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_UploadResultDataMessage {
    pub const ZERO: Self = ak_ufix_UploadResultDataMessage {
        upload: ak_ufix_UploadResultData::ZERO,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}
pub const AK_UFIX_UPLOADRESULTDATAMESSAGE_PRESENT_UPLOAD: u32 = 1 << 0;

/// Encode group for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_DualResponse {
    pub presence: u32,
}
impl ak_efix_DualResponse {
    pub const ZERO: Self = ak_efix_DualResponse {
        presence: 0,
    };
}

/// Decode group for `DualResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_DualResponse {
    pub presence: u32,
}
impl ak_dfix_DualResponse {
    pub const ZERO: Self = ak_dfix_DualResponse {
        presence: 0,
    };
}

/// Encode group for `DualResponse`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_DualResponse {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_DualResponse {
    pub const ZERO: Self = ak_ufix_DualResponse {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ChunkLeaf`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkLeaf {
    pub k: ak_str,
    pub v: i32,
    pub presence: u32,
}
impl ak_efix_ChunkLeaf {
    pub const ZERO: Self = ak_efix_ChunkLeaf {
        k: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v: 0,
        presence: 0,
    };
}

/// Decode group for `ChunkLeaf`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkLeaf {
    pub k: ak_span,
    pub v: i32,
    pub presence: u32,
}
impl ak_dfix_ChunkLeaf {
    pub const ZERO: Self = ak_dfix_ChunkLeaf {
        k: ak_span { off: 0, len: 0, coder: 0 },
        v: 0,
        presence: 0,
    };
}

/// Encode group for `ChunkLeaf`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ChunkLeaf {
    pub k: ak_str,
    pub v: i32,
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ChunkLeaf {
    pub const ZERO: Self = ak_ufix_ChunkLeaf {
        k: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v: 0,
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ChunkInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkInner {
    pub presence: u32,
}
impl ak_efix_ChunkInner {
    pub const ZERO: Self = ak_efix_ChunkInner {
        presence: 0,
    };
}

/// Decode group for `ChunkInner`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_ChunkInner {
    pub presence: u32,
}
impl ak_dfix_ChunkInner {
    pub const ZERO: Self = ak_dfix_ChunkInner {
        presence: 0,
    };
}

/// Encode group for `ChunkInner`.  With the unknown-field bag (decision 11 candidate).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_ufix_ChunkInner {
    pub unknown: ak_blob,
    pub presence: u32,
}
impl ak_ufix_ChunkInner {
    pub const ZERO: Self = ak_ufix_ChunkInner {
        unknown: ak_blob { data: ::core::ptr::null(), len: 0 },
        presence: 0,
    };
}

/// Encode group for `ChunkElement`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_efix_ChunkElement {
    pub id: ak_str,
    pub inner: ak_efix_ChunkInner,
    pub presence: u32,
}
